# fractal-viewer

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: fractal.glsl
src/: Fractal.cpp  Fractal.hpp  FractalSettings.cpp  FractalSettings.hpp  InputManager.cpp  InputManager.hpp  Main.cpp  Program.cpp  Program.hpp  UIManager.cpp  UIManager.hpp
